--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie-edge">
     <link rel="icon" type="image/svg" href="images/favico/ssdev-logo.png">
     <link rel="stylesheet" href="styles/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;500&display=swap" rel="stylesheet">
     <title>Sead Silajdzic | SS Dev</title>
 </head>
-<body>
+<body id="home">
     <header class="main-head">
         <nav>
             <div class="logo">
@@ -20,9 +21,8 @@
             </div>
     
             <ul>
-                <li><a class="active" href="/">Home</a></li>
-                <li><a href="/">Projects</a></li>
-                <li><a href="/">Contact</a></li>
+                <li><a class="active" href="#home">Home</a></li>
+                <li><a href="#projects">Projects</a></li>
             </ul>
         </nav>
     </header>
@@ -34,7 +34,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, praesentium?</p>
             <div class="intro-social">
                 <a href="https://www.facebook.com/silajdzicWebDev" target="_blank"><img src="images/social/facebook.svg" alt="facebook"></a>
-                <a href="https://www.instagram.com/ss_.dev/" target="_blank"><img src="images/social/instagram.svg" alt="instagram"></a>
+                <a href="https://www.instagram.com/ss___dev/" target="_blank"><img src="images/social/instagram.svg" alt="instagram"></a>
                 <a href="https://www.linkedin.com/in/sead-silajdzic-837367182/" target="_blank"><img src="images/social/linkedin.svg" alt="linkedin"></a>
                 <a href="https://www.github.com/SeadSilajdzic" target="_blank"><img src="images/social/github.svg" alt="github"></a>
             </div>
@@ -117,6 +117,16 @@
         </div>   
 
         <object class="bg-shape" data="images/illustration/bg-shape.svg"></object>
+    </section>
+
+    <section id="projects" class="projects">
+        <div class="project">
+            <h2>Blogger</h2>
+            <img src="images/projects/blogger mockup.png" alt="blogger mockup image">
+            <h3>About this project</h3>
+            <p>Blogger is website about all kinds of art, so users can learn something new or find useful pieces of information about great people in history who changed our world in any way.</p>
+            <p><strong>Read more about this at:</strong> <a href="https://www.linkedin.com/pulse/first-published-project-sead-silajdzic" target="_blank">Blogger</a></p>               
+        </div>
     </section>
 </body>
 </html>
